# romi-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: backend-ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0002_create_profile_and_place_tables.py  0003_create_driving_and_safety_tables.py  0005_expand_behavior_event_taxonomy.py  0006_add_profile_behavior_warning_sensitivity.py  0007_add_account_display_name.py  0008_numeric_behavior_warning_sensitivity.py
app/: main.py
app/ai/: __init__.py  driver_monitoring.py  mock_vit_adapter.py  prediction_mapper.py  real_vit_adapter.py
app/api/: dependencies.py  error_handlers.py  model_lab.py
app/core/: config.py  constants.py  enums.py  error_codes.py  exceptions.py  logging.py  time.py  voice.py
app/db/: init_db.py  seed.py  session.py
app/integrations/: __init__.py  driver_monitoring.py  itunes.py
app/models/: __init__.py  account.py  behavior_event.py  driver_profile.py  driver_response.py  driving_session.py  intervention.py  location_sample.py  saved_place.py  search_history.py
app/policies/: __init__.py  agent_demo_policy.py  driving_context_policy.py  report_narrative_policy.py  sliding_window_behavior_policy.py
app/realtime/: __init__.py  connection_manager.py  detection_pipeline.py  detection_publisher.py  inference_worker.py  protocol.py  session_runtime.py
app/repositories/: agent_conversation_repository.py  behavior_event_repository.py  location_sample_repository.py  (+4 more)
tests/: conftest.py
(+98 files in other folders)
