[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roadie-backend"
version = "0.1.0"
description = "FastAPI backend for the ROADIE project."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "SQLAlchemy>=2.0,<2.1",
    "asyncmy>=0.2,<1.0",
    "alembic>=1.13,<2.0",
    "httpx>=0.27,<1.0",
    "pillow>=11,<12",
    "python-multipart>=0.0.20,<1.0",
    "timm>=1.0,<2.0",
    "torch>=2.8,<2.9",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<2.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
